# sji_load_tables

./: LICENSE  README.md  setup.cfg
examples/: economical_joist_table_example1.py  get_joist_data_example1.py  lightest_joist_example1.py
src/sji_load_tables/: __init__.py  interp.py  joists.py
src/sji_load_tables/data/: __init__.py  joist_data.json
