[metadata]
name = sji_load_tables
version = 0.0.1
; Following metadata is optional.
author = Mark Denavit
author_email = mdenavit@utk.edu
description = A package for looking up values from the Steel Joist Institute (SJI) load tables.
url = https://github.com/denavit/sji_load_tables
license = MIT

[options]
; Need to tell setuptools where to find the packages, since they're tucked
; inside the `src` directory.
package_dir =
    =src
packages = find:

; Specifying minimum Python version and dependencies is optional, but helpful.
python_requires = >=3.7
install_requires =
    ; Put any dependencies here

[options.packages.find]
where = src
